fix/gallerySpacing

--- a/src/style/homeGallery.scss
+++ b/src/style/homeGallery.scss
@@ -3,7 +3,8 @@
   height: 100%;
   position: relative;
   //   height:fit-content
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
+  padding: 10px 0;
   background-color: white;
   cursor: pointer;
   .img-wrap {
